# multi-agent-ops-assistant

./: .coveragerc  .editorconfig  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SUPPORT.md  TRANSPARENCY_FAQS.md  azure.yaml  conftest.py  multi-agent-ops-assistant.code-workspace  next-steps.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: azure-dev.yml  broken-links-checker.yml  build-and-deploy.yml  codeql.yml  docker-build.yml  pylint.yml  stale-bot.yml
database/: schema.sql  seed-data.sql
docs/: DEPLOYMENT.md  DeploymentGuide.md  QuotaCheck.md  TECHNICAL_GUIDE.md  TRANSPARENCY_FAQ.md  issue-log.md
hooks/: postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: app-insights.bicep  app-insights.json  appgateway.bicep  containerapp-dns.bicep  network.bicep  private-endpoints.bicep
infra/scripts/: deploy.sh  output-env.sh  seed-database.sh  setup-foundry-iq.sh
operational-docs/: kpi-definitions.md  playbook-cold-bar-surge.md  playbook-mobile-order-surge.md  sop-rush-handling.md  sop-staffing-guidelines.md
scripts/: deploy-all.sh  teardown.sh  test-local.sh
src/: api.py  orchestrator.py  shared_state.py
src/agents/: exceptions.py  knowledge.py  (+1 more)
static/: index.html
tests/: data_validation_test.py  e2e_agent_test.py  integration_test.py  perf_test.py  smoke_test.py
(+27 files in other folders)
